<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_bg"
    android:orientation="vertical"
    tools:context="gangajal.app.project.uks.gangajal.activity.OrderActivity">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_pledge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    android:buttonTint="@android:color/white" />

                <TextView
                    android:id="@+id/tv_pledge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/please_take_a_pledge_for_clean_ganga"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/bottle_img" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:digits="0123456789"
                android:hint="@string/enter_phone"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:hint="@string/enter_address"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/shape_et_bg"
                    android:hint="@string/enter_zone"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    android:buttonTint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/i_accept"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20" />

                <TextView
                    android:id="@+id/tv_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp_5"
                    android:text="@string/term_and_condition_"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/shape_btn_bg"
                android:padding="@dimen/dp_10"
                android:text="@string/order"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
