<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/feedback_bg"
    android:orientation="vertical"
    tools:context="gangajal.app.project.uks.gangajal.activity.FeedbackActivity">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/thank" />
            </RelativeLayout>
            <RatingBar
                android:id="@+id/pb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:progressBackgroundTint="#C3C3C3"
                android:progressTint="#e69310"
                android:rating="3"
                />


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:hint="@string/contact_no"
                android:inputType="number"
                android:maxLength="10"
                android:digits="0123456789"
                android:maxLines="1"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingTop="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/shape_et_bg"
                android:gravity="start"
                android:hint="@string/write_your_comment_here"
                android:minLines="4"
                android:padding="@dimen/dp_10"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/shape_btn_bg"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

